# piper-original

./: .gitignore  README  README.md  circle.yml  meson.build  meson_install.sh  piper-profile-tabs.ui  piper.desktop  piper.in  piper.py  piper.ui  ratbag.py  setup.py
data/: meson.build  piper.gresource.xml  piper.ui
piper/: __init__.py  piper.py  piper.ui  ratbagd.py
